Added SCRIPT BROWSER: https://chalwk.github.io/HALO-SCRIPT-PROJECTS/

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <section class="card" id="search-section">
                 <h2>Search Scripts</h2>
                 <div class="search-container">
-                    <label for="scriptSearch">Search for scripts by name or description...</label>
+                    <label for="scriptSearch"></label>
                     <input type="text" id="scriptSearch"
                            placeholder="Search for scripts by name or description..."
                            class="search-input">
