Added SCRIPT BROWSER: https://chalwk.github.io/HALO-SCRIPT-PROJECTS/

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
                     <input type="text" id="scriptSearch"
                            placeholder="Search for scripts by name or description..."
                            class="search-input">
-                    <button id="clearSearch" class="btn" style="background:linear-gradient(180deg,#2bd1a6,#159b6f)">
+                    <button id="clearSearch"
+                            class="btn" style="background:linear-gradient(180deg,#2bd1a6,#159b6f)">
                         Clear
                     </button>
                 </div>
