--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
           rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github-dark.min.css">
-    <link rel="stylesheet" href="website/homepage-style.css">
+    <link rel="stylesheet" href="script-browser/homepage-style.css">
 </head>
 <body>
 <div class="container">
@@ -100,6 +100,6 @@
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"></script>
-<script src="website/homepage-script-manager.js"></script>
+<script src="script-browser/homepage-script-manager.js"></script>
 </body>
 </html>
