--- a/index.html
+++ b/index.html
@@ -62,6 +62,6 @@
     </div>
 </footer>
 
-<script src="script-browser/script.js"></script>
+<script defer src="script-browser/script.js"></script>
 </body>
 </html>
