--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <footer class="site-footer">
     <div class="container">
-        <small>HALO SCRIPT PROJECTS Browser</small>
+        <small>© 2025 Jericho Crosby (Chalwk). All rights reserved.</small>
     </div>
 </footer>
 
